ensure visibility of drop-down nav with little content

--- a/app/assets/stylesheets/think_feel_do_engine/footer.css
+++ b/app/assets/stylesheets/think_feel_do_engine/footer.css
@@ -3,12 +3,18 @@ html,body {
   min-height: 100%;
 }
 
-#footer-wrap {min-height: 100%;}
+#footer-wrap {
+  min-height: 100%;
+}
 
-#main {overflow:auto;
-  padding-bottom: 60px;}  /* must be same height as the footer */
+#main {
+  overflow:auto;
+  padding-bottom: 60px;  /* must be same height as the footer */
+  min-height: 350px;     /* ensure drop-down nav menu is visible */
+}
 
-.footer {position: relative;
+.footer {
+  position: relative;
   margin-top: -60px; /* negative value of footer height */
   height: 60px;
   clear:both;
@@ -18,11 +24,11 @@ html,body {
 
 /*Opera Fix*/
 body:before {/* thanks to Maleika (Kohoutec)*/
-content:"";
-height:100%;
-float:left;
-width:0;
-margin-top:-32767px;/* thank you Erik J - negate effect of float*/
+  content:"";
+  height:100%;
+  float:left;
+  width:0;
+  margin-top:-32767px;/* thank you Erik J - negate effect of float*/
 }
 
 /* Custom page CSS
